# Auth_2

./: .flake8  README.md  README_S1.md  docker-compose.prod.yml  docker-compose.yml  example.env
async_api/: .gitignore  docker-compose.yml  example.env  init.sql
async_api/etl/src/: main.py  raw_sql.py
async_api/etl/src/data/: state.json
async_api/etl/src/etl/: extract.py  scheme.py  transform.py
async_api/etl/src/index_scheme/: films_schema.json
async_api/src/: main.py
async_api/src/api/v1/: films.py  (+1 more)
async_api/src/core/: config.py
async_api/src/middleware/: auth.py
async_api/src/models/: film.py
auth/: main.py
auth/api/v1/: oauth.py  role.py  user.py  utils.py
auth/core/: config.py
auth/migrations/versions/: 0c62fa30dc0b_add_social_account.py
auth/models/: user.py  utils.py
auth/services/user/: layer_models.py  payload_models.py
auth/static/: swagger.json
auth/utils/: tracer.py
docs/: OAuth.drawio
nginx/configs/: auth.conf
sprint_5/: docker-compose.yml  pyproject.toml
sprint_5/async_api/etl/_del/: Dockerfile
sprint_5/async_api/etl/src/: raw_sql.py
sprint_5/async_api/tests/: .test.env  new_movies_database.ddl
sprint_5/async_api/tests/data/: data.py  models.py  utils.py
sprint_5/async_api/tests/functional/: settings.py
sprint_5/async_api/tests/functional/src/: test_search.py
sprint_5/async_api/tests/loader/: config.py  loader.py  utils.py
sprint_5/docker/: Dockerfile.admin_panel  Dockerfile.async_api  Dockerfile.etl
sprint_5/envs/: example.env
sprint_5/nginx/configs/: site.conf
src/api/v1/: permission.py
(+6 files in other folders)
